fix on productIdNum in includedOpenTickt
productIdNum in includedOpenTicket fixed