@@ -42,7 +42,7 @@ public class IncludedOpenTicketType extends Object {
 	}
 
 	@FieldOrder(order = 0)
-	@IntRange(minValue=1,maxValue=32000)
+	@IntRange(minValue=0,maxValue=32000)
 	@Asn1Optional public Long productOwnerNum;
 
 	@FieldOrder(order = 1)
@@ -361,12 +361,12 @@ public class IncludedOpenTicketType extends Object {
 	
 	public void setValidFromTimeZone(Date dateLocal, Date dateUTC ) {
 		// -- (UTC = local + offset * 15 Minutes)	
-		this.validFromUTCOffset = new Long(dateLocal.getTime() - dateUTC.getTime()) / (1000 * 60 * 15);
+		this.validFromUTCOffset = Long.valueOf( (dateLocal.getTime() - dateUTC.getTime()) / (1000 * 60 * 15));
 	}
 	
 	public void setValidUntilTimeZone(Date dateLocal, Date dateUTC ) {
 		// -- (UTC = local + offset * 15 Minutes)	
-		this.validUntilUTCOffset = new Long(dateLocal.getTime() - dateUTC.getTime()) / (1000 * 60 * 15);
+		this.validUntilUTCOffset = Long.valueOf( (dateLocal.getTime() - dateUTC.getTime()) / (1000 * 60 * 15));
 		
 		if (this.validFromUTCOffset.longValue() == this.validUntilUTCOffset.longValue()) {
 			this.validUntilUTCOffset = null;
@@ -393,19 +393,53 @@ public class IncludedOpenTicketType extends Object {
 			return null;
 		}		
 		
+		if (this.validUntilTime == null) {
+			this.validUntilTime = 1439L;
+		}		
+		
 		return DateTimeUtils.getDate(issuingDate, this.validFromDay + this.validUntilDay, this.validUntilTime);
 		
 	}
 	
 	public Date getUTCValidFromDate(Date issuingDate){
+		
+		if (issuingDate == null) return null;
+		
+		if (this.validFromDay == null) {
+			this.validFromDay = 0L;
+		}
+		
+		if (this.validUntilDay == null) {
+			return null;
+		}		
+		
+		if (this.validUntilTime == null) {
+			this.validUntilTime = 1439L;
+		}
+		
 		return DateTimeUtils.getUTCDate(issuingDate, this.validFromDay, this.validFromTime, this.validFromUTCOffset);
 	}	
 	
 	public Date getUTCValidUntilDate(Date issuingDate){
+		
+		if (issuingDate == null) return null;
+		
+		if (this.validFromDay == null) {
+			this.validFromDay = 0L;
+		}
+		
+		if (this.validUntilDay == null) {
+			return null;
+		}		
+		
+		if (this.validUntilTime == null) {
+			this.validUntilTime = 1439L;
+		}
+		
 		if (this.validUntilUTCOffset == null) {
 			return DateTimeUtils.getUTCDate(issuingDate, this.validFromDay, this.validFromTime, this.validFromUTCOffset);
 		} else {
-			return DateTimeUtils.getUTCDate(issuingDate, this.validFromDay, this.validUntilTime, this.validFromUTCOffset);
+			return DateTimeUtils.getUTCDate(issuingDate, this.validFromDay + this.validUntilDay, this.validUntilTime, this.validFromUTCOffset);
 		}
 	}
 
