@@ -42,7 +42,7 @@ public class IncludedOpenTicketType extends Object {
 	}
 
 	@FieldOrder(order = 0)
-	@IntRange(minValue=1,maxValue=32000)
+	@IntRange(minValue=0,maxValue=32000)
 	@Asn1Optional public Long productOwnerNum;
 
 	@FieldOrder(order = 1)
@@ -385,12 +385,12 @@ public class IncludedOpenTicketType extends Object {
 	
 	public void setValidFromTimeZone(Date dateLocal, Date dateUTC ) {
 		// -- (UTC = local + offset * 15 Minutes)	
-		this.validFromUTCOffset = new Long(dateLocal.getTime() - dateUTC.getTime()) / (1000 * 60 * 15);
+		this.validFromUTCOffset = Long.valueOf((dateLocal.getTime() - dateUTC.getTime()) / (1000 * 60 * 15));
 	}
 	
 	public void setValidUntilTimeZone(Date dateLocal, Date dateUTC ) {
 		// -- (UTC = local + offset * 15 Minutes)	
-		this.validUntilUTCOffset = new Long(dateLocal.getTime() - dateUTC.getTime()) / (1000 * 60 * 15);
+		this.validUntilUTCOffset = Long.valueOf((dateLocal.getTime() - dateUTC.getTime()) / (1000 * 60 * 15));
 		
 		if (this.validFromUTCOffset.longValue() == this.validUntilUTCOffset.longValue()) {
 			this.validUntilUTCOffset = null;
@@ -400,6 +400,16 @@ public class IncludedOpenTicketType extends Object {
 	
 	
 	public Date getValidFromDate(Date issuingDate){
+		
+		if (issuingDate == null) return null;
+		
+		if (this.validFromDay == null) {
+			this.validFromDay = 0L;
+		}
+		
+		if (this.validFromTime == null) {
+			this.validFromTime = 0L;
+		}
 		
 		return DateTimeUtils.getDate(issuingDate, this.validFromDay, this.validFromTime);
 		
@@ -426,10 +436,40 @@ public class IncludedOpenTicketType extends Object {
 	}
 	
 	public Date getUTCValidFromDate(Date issuingDate){
+		
+		if (issuingDate == null) return null;
+		
+		if (this.validFromDay == null) {
+			this.validFromDay = 0L;
+		}
+		
+		if (this.validUntilDay == null) {
+			return null;
+		}		
+		
+		if (this.getValidUntilTime() == null) {
+			this.validUntilTime = 1439L;
+		}
+		
 		return DateTimeUtils.getUTCDate(issuingDate, this.validFromDay, this.validFromTime, this.validFromUTCOffset);
 	}	
 	
 	public Date getUTCValidUntilDate(Date issuingDate){
+		
+		if (issuingDate == null) return null;
+		
+		if (this.validFromDay == null) {
+			this.validFromDay = 0L;
+		}
+		
+		if (this.validUntilDay == null) {
+			return null;
+		}		
+		
+		if (this.getValidUntilTime() == null) {
+			this.validUntilTime = 1439L;
+		}
+		
 		this.getValidUntilDate(issuingDate);
 		if (this.validUntilUTCOffset == null) {
 			return DateTimeUtils.getUTCDate(issuingDate, this.validFromDay + this.validUntilDay, this.validFromTime, this.validFromUTCOffset);
