@@ -184,7 +184,7 @@ public class IssuingData extends Object {
 	public Long getCurrencyFract() {
 
 		if (currencyFract == null) {
-			return new Long(2);
+			return Long.valueOf(2L);
 		}
 		return this.currencyFract;
 	}
@@ -323,11 +323,11 @@ public class IssuingData extends Object {
 		Calendar cal = Calendar.getInstance();
 		cal.setTime(date);
 		
-		this.issuingYear = new Long( cal.get(Calendar.YEAR));
-		this.issuingDay = new Long (cal.get(Calendar.DAY_OF_YEAR));
+		this.issuingYear = Long.valueOf(cal.get(Calendar.YEAR));
+		this.issuingDay = Long.valueOf(cal.get(Calendar.DAY_OF_YEAR));
 		int time =  cal.get(Calendar.HOUR_OF_DAY) * 60 + cal.get(Calendar.MINUTE);
 		if (time >= 0) {
-			this.issuingTime = new Long (time );
+			this.issuingTime = Long.valueOf(time );
 		}
 		
 	}
